--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "symfony/dom-crawler": "^7.3",
-        "illuminate/support": "^12.20"
+        "illuminate/support": "^12.20",
+        "maatwebsite/excel": "^3.1"
     },
     "license": "MIT",
     "autoload": {
