--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: "wadagz/asentamientos-mexico"
-    develop:
-      watch:
-        - action: sync
-          path: ./src
-          target: /usr/asentamientos-mexico/src
-        - action: sync
-          path: ./python
-          target: /usr/asentamientos-mexico/python
-        - action: sync
-          path: ./tests
-          target: /usr/asentamientos-mexico/tests
-        - action: rebuild
-          path: composer.json
+    volumes:
+      - './:/usr/asentamientos-mexico'
     restart: unless-stopped
     tty: true
