fix: ruta provider incorrecta.

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Wadagz\\AsentamientosMexico\\AsentamientosMexicoProvider"
+                "Wadagz\\AsentamientosMexico\\Providers\\AsentamientosMexicoProvider"
             ]
         }
     },
