--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Setup Python
-    - uses: actions/setup-python@v5
+      uses: actions/setup-python@v5
       with:
         python-version: '3.13'
         cache: 'pip' # caching pip dependencies
