--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Install and test
+name: Test and Static analysis
 
 on:
   push:
@@ -44,3 +44,6 @@ jobs:
 
     - name: Run tests
       run: composer test
+
+    - name: Static analysis
+      run: composer phpstan
