--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,11 +21,11 @@
 title: Asentamientos México
 description: >- # this means to ignore newlines until "baseurl:"
   Documentación de uso sobre paquete Asentamientos México para Laravel.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/asentamientos-mexico/" # the subpath of your site, e.g. /blog
+# url: "https://wadagz.github.io/asentamientos-mexico" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-remote_theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs@v0.10.1
 plugins:
   - jekyll-feed
 
