--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Asentamientos México
 description: >- # this means to ignore newlines until "baseurl:"
   Documentación de uso sobre paquete Asentamientos México para Laravel.
-baseurl: "/asentamientos-mexico/" # the subpath of your site, e.g. /blog
+baseurl: "/asentamientos-mexico" # the subpath of your site, e.g. /blog
 # url: "https://wadagz.github.io/asentamientos-mexico" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
